# calendarES

./: LICENSE  README.md  main.py  parser.py  pyproject.toml  requirements.txt
CalendarES/: calendarES.ics
