[project]
name = "calendares"
version = "0.1.0"
description = "iCalendar generator for Espírito Santo (Brazilian State) holidays"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "icalendar>=6.1.2",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "types-icalendar>=6.1.2.20250321",
    "types-pytz>=2025.2.0.20250326",
]
